[package]
name = "egui-winit-ash-integration"
version = "0.1.2"
authors = ["Orito Itsuki <orito.itsuki@gmail.com>"]
description = "This is the egui integration crate for winit and ash."
edition = "2018"
homepage = "https://docs.rs/egui-winit-ash-integration"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-winit-ash-integration"
readme = "README.md"
repository = "https://github.com/MatchaChoco010/egui-winit-ash-integration"
categories = ["gui", "game-development"]
keywords = ["gui", "winit", "ash", "vulkan", "gpu-allocator"]
include = [
  "src/*.rs",
  "src/shaders/spv/*.spv",
  "Cargo.toml",
]

[features]
default = [ "gpu-allocator-feature" ]
gpu-allocator-feature = [ "gpu-allocator" ]

[dependencies]
anyhow = "1.0.38"
ash = "0.33.2"
bytemuck = "1.5.0"
copypasta = "0.7.1"
egui = "0.14.2"
gpu-allocator = { version = "0.9.0", optional = true }
webbrowser = "0.5.5"
winit = "0.25.0"

[dev-dependencies]
ash-window = "0.7.0"
crevice = "0.7.1"
image = "0.23.13"
memoffset = "0.6.1"
mint = "0.5.6"
tobj = "3.0.1"

[dev-dependencies.cgmath]
version = "0.18.0"
features = ["mint"]
